--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,15 +14,15 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.11'
 
     - name: Install dependencies
-      run: make install
+      run: pip install -r requirements.txt
 
     - name: Run tests  
       run: |
