--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -9,16 +9,28 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Authenticate to Google Cloud
+      id: auth
+      uses: google-github-actions/auth@v2
+      with:
+        workload_identity_provider: 'projects/932859730377/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+        service_account: 'giturra@challenge-mle.iam.gserviceaccount.com'
+
     - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.2.0
+      uses: google-github-actions/setup-gcloud@v2
       with:
         version: 'latest'
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+    - name: Configure Docker for GCP
+      run: gcloud auth configure-docker
 
     - name: Build Docker image
       run: |
