update branch CI/CD

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,10 +3,10 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - feature/adding-ci-cd-configurations
+      - develop
   pull_request:
     branches:
-      - feature/adding-ci-cd-configurations
+      - develop
 
 jobs:
   build-and-test:
